todoyu assets extension changelog

assets 1.3.1 - 2013-12-31
	* Added: Image assets quickinfo preview
	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
	* Bugfix: Better error-handling for previews

assets 1.3.0 - 2013-03-27
	* Added: Inline adding of assets to project
	* Added: Listing of assets in project header (new tab)
	* Added: Separate types in asset list
	* Added: Show comment assets in tab
	* Added: Check delete right for comment assets
	* Added: Check see rights for comment assets
	* Added: Possibility to add comment assets
	* Added: Added record selector with dropdown instead of autocompleter
	* Added: Added parenttype comment for assets
	* Added: New form field types: recordsAsset, recordsTaskAsset, recordsProjectAsset
	* Added: TodoyuAssetsAssetManager::getLabel(), ::getMatchingAssets(), ::searchAssets() for the new field types
	* Added: TodoyuAssetsAsset->getLabel()
	* Changed: Added link to comment in asset list
    * Changed: Adapt asset list to new width
	* Bugfix: fixed icon of asset upload button

assets 1.2.0 - 2012-05-03
	* Feature: Add assets also during task edit
	* Feature: No upload form required anymore. Dialog is opened directly on button click
	* Feature: Check first if download of asset is possible. Show error message if a problem occurs
	* Added Notification explaining set visibility after toggeling asset public/non-public flag
	* Changed: Optimized styling to save space

assets 1.1.0 - 2011-06-17
	* Bugfix: Spelling mistake in rights check when deleting asset file
	* Feature: Added mime type icon for .txt files, extended range of office mime types
	* Feature: Added creator attribute column in assets listing
	* Feature: Added task asset upload to quicktask creation
	* Feature: Added task asset upload to task creation form
	* Feature: Cleanup of Rights Management
	* Changed: Increased filename max length (from 100 to 255 chars)
	* Changed: Requires core 2.1
	* Changed: Structure for 2.1