@@ -1,5 +1,8 @@
 todoyu assets extension changelog
 
+assets 1.3.1 - not released yet
+	* Added: Indonesian Language. Credits to Abdush Shomad.
+
 assets 1.3.1 - 2013-12-31
 	* Added: Image assets quickinfo preview
 	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
